--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-  <title>Jovani Ambriz</title>
+  <meta charset="utf-8">
+  <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Course Portal for Jovani Ambriz</title>
 </head>
 <body>
  <h1>Jovani Ambriz</h1>
