--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <title>Course Portal for Jovani Ambriz</title>
 </head>
 <body>
- <h1>Jovani Ambriz</h1>
+  <header class="portal-header">
+    <h1 class="student-name">Jovani Ambriz</h1>
+  </header>
+ <div>
+<h2 class="course-headline">WDD 230: Assignment Portal</h2>
+<ul>
+  <li>Lesson 02:<a href="">Assignment Link</a></li>
+  <li>Lesson 03:<a href="">Assignment Link</a></li>
+</ul>
+ </div>
+ <footer>
+
+ </footer>
 </body>
 </html> 
