--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal for Jovani Ambriz</title>
-  <link href="/styles.css" rel="stylesheet">
+  <link href="/styles.css" rel="stylesheet" />
   <script src="/script.js"></script>
 </head>
 <body>
