--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <li>Lesson 03:<a href="">Assignment Link</a></li>
 </ul>
  </div>
- <footer>
-
- </footer>
+  <footer>
+    &copy;2021 <span></span>
+  </footer>
 </body>
 </html> 
