--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="portal-header">
     <h1 class="student-name">Jovani Ambriz</h1>
   </header>
-  <img class="profile-image" src="C:\Users\ambri\OneDrive\Documents\BYU-I\WDD 230\jambrizz.github.io\img\Family pic1.jpg" alt="Ambriz Family">
+  <img class="profile-image" src="img\Family pic1.jpg" alt="Ambriz Family">
  <div>
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
 <ul>
