--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </ul>
  </div>
   <footer>
-    &copy;2021 <span></span>
+    &copy; <span id="currentYear"></span>
   </footer>
 </body>
 </html> 
