--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </ul>
  </div>
   <footer>
-    &copy; <span id="currentYear"></span>
+   <p> &copy; <span id="currentYear"></span></p>
   </footer>
 </body>
 </html> 
