--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal for Jovani Ambriz</title>
   <link href="/styles.css" rel="stylesheet" />
-  <script src="/script.js"></script>
+  <script src="/script.js">
+  let d = new Date();
+document.getElementById("currentYear").innerHTML = d.getFullYear();
+  </script>
 </head>
 <body>
   <header class="portal-header">
