--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ document.getElementById("currentYear").innerHTML = d.getFullYear();
 </ul>
  </div>
   <footer>
-   <p> &copy; <span id="d"></span></p>
+   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><span href="https://www.byui.edu/online"></span></p>
   </footer>
 </body>
 </html> 
