--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal for Jovani Ambriz</title>
   <link href="/styles.css" rel="stylesheet" />
-  <script src="/script.js">
-  let d = new Date();
-document.getElementById("currentYear").innerHTML = d.getFullYear();
+  <script src="/script.js"></script>
+  <script>
+     let d = new Date();
+      document.getElementById("currentYear").innerHTML = d.getFullYear();
+    function lastM(){
+      let dateT = document.lastModified;
+    }
   </script>
 </head>
 <body>
@@ -24,7 +28,8 @@ document.getElementById("currentYear").innerHTML = d.getFullYear();
 </ul>
  </div>
   <footer>
-   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><span href="https://www.byui.edu/online"></span></p>
+   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><a href="https://www.byui.edu/online"></a></p>
+   <p><span id="lastM()"></span></p>
   </footer>
 </body>
 </html> 
