--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </ul>
  </div>
   <footer>
-   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><a href="https://www.byui.edu/online"></a></p>
+   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |<a href="https://www.byui.edu/online"></a></span></p>
    <p><span id="lastM()"></span></p>
   </footer>
 </body>
