--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </ul>
  </div>
   <footer>
-   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online"></a></p>
+   <p> &copy; <span id="d"></span><span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
    <p><span id="date"></span></p>
   </footer>
 </body>
