--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </ul>
  </div>
   <footer>
-   <p> &copy;<span $(year())></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+   <p> &copy; <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
    <p><span id="date"></span></p>
   </footer>
 </body>
