--- a/test.html
+++ b/test.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Course Portal for Jovani Ambriz</title>
   <link href="/styles.css" rel="stylesheet" />
-  <link href="/script.js" rel="stylesheet"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
   crossorigin="anonymous"></script>
+  <script>
+      $(document).ready(function(){
+  $('.currentYear').text( new Date().getFullYear() );
+});
+  </script>
 </head>
 <body>
   <header class="portal-header">
