--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  </div>
   <footer>
    <p> &copy;<span class="currentYear"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
-   <p><span class="date"></span></p>
+   <p class="modDate">Last updated:</p><span class="date"></span>
   </footer>
 </body>
 </html> 
