--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </ul>
  </div>
   <footer>
-   <p> &copy;<span class="currentYear"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+   <span class="foot-info">&copy;</span><span class="currentYear"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
    <span class="modDate">Last updated: </span><span class="date"></span>
   </footer>
 </body>
