--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Course Portal for Jovani Ambriz</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link href="/styles.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
   crossorigin="anonymous"></script>
   <script src="/script.js"></script>
