--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Course Portal for Jovani Ambriz</title>
+  <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link href="/styles.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,13 +18,13 @@
     <h1 class="student-name">Jovani Ambriz</h1>
   <img class="profile-image" src="img\Family pic1.jpg" alt="Ambriz Family">
  </header>
- <div>
+ <main>
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
 <ul>
   <li>Lesson 02:<a href="">Assignment Link</a></li>
   <li>Lesson 03:<a href="">Assignment Link</a></li>
 </ul>
- </div>
+</main>
   <footer>
    <span class="foot-info">&copy;</span><span class="currentYear"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
    <span class="modDate">Last updated: </span><span class="date"></span>
