--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
@@ -16,7 +17,7 @@
 <body>
   <header class="portal-header">
     <h1 class="student-name">Jovani Ambriz</h1>
-  <img class="profile-image" src="img\Family pic1.jpg" alt="Ambriz Family">
+  <img class="profile-image" src="img/Familypic1.jpg" alt="Ambriz Family">
  </header>
  <main>
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
