--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </ul>
 </main>
   <footer>
-   <span class="foot-info">&copy;</span><span class="currentYear"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
+   <span class="foot-info">&copy;</span><span id="year"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
    <span class="modDate">Last updated: </span><span class="date"></span>
   </footer>
 </body>
