--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
   crossorigin="anonymous"></script>
+  <script>
+    function currentYear () {
+  let d = new Date();
+  document.getElementById('year').innerHTML = d.getFullYear();
+};
+  </script>
   <script src="/script.js"></script>
 </head>
 <body>
