--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </main>
   <footer>
    <span class="foot-info">&copy;</span><span id="year"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
-   <span class="modDate">Last updated: </span><span class="date" id="dateM"></span>
+   <span class="modDate">Last updated: </span><span class="date"></span>
   </footer>
 </body>
 </html> 
