--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -6,17 +6,41 @@
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
+  <link href="/normalize.css" rel="stylesheet" />
   <link href="l2styles.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
-  <script ></script>
+  <script defer src="l2script.js"></script>
 </head>
 <body>
   <header>
     
  </header>
  <main>
-<h1>test</h1>
+<h1 class="principle-1">Visual Hierarchy</h1>
+<h3 class="company1">company name</h3>
+<a class="companyURL1" href="">URL1</a>
+<img class="screenshot1" src="" alt="">
+<p class="desc-1">
+
+</p>
+
+<h1 class="principle-2">White Space</h1>
+<h3 class="company2">company name</h3>
+<a class="companyURL2" href="">URL2</a>
+<img class="screenshot2" src="" alt="">
+<p class="desc-2">
+
+</p>
+
+<h1 class="principle-3"></h1>
+<h3 class="company3">company name</h3>
+<a class="companyURL3" href="">URL3</a>
+<img class="screenshot3" src="" alt="">
+<p class="desc-3">
+
+</p>
+
 </main>
   <footer>
    
