--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -18,16 +18,16 @@
  </header>
  <main>
 <h1 class="principle-1">Visual Hierarchy</h1>
-<h3 class="company1">company name</h3>
-<a class="companyURL1" href="">URL1</a>
+<h3 class="company1">Disney</h3>
+<a class="companyURL1" href="https://www.disney.com/">URL1</a>
 <img class="screenshot1" src="" alt="">
 <p class="desc-1">
 
 </p>
 
 <h1 class="principle-2">White Space</h1>
-<h3 class="company2">company name</h3>
-<a class="companyURL2" href="">URL2</a>
+<h3 class="company2">Best Buy</h3>
+<a class="companyURL2" href="https://www.bestbuy.com/">URL2</a>
 <img class="screenshot2" src="" alt="">
 <p class="desc-2">
 
