--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -19,7 +19,7 @@
  <main>
 <h1 class="principle-1">Visual Hierarchy</h1>
 <h3 class="company1">Disney</h3>
-<a class="companyURL1" href="https://www.disney.com/">URL1</a>
+<a class="companyURL1" href="https://www.disney.com/">www.disney.com</a>
 <img class="screenshot1" src="" alt="">
 <p class="desc-1">
 
@@ -27,7 +27,7 @@
 
 <h1 class="principle-2">White Space</h1>
 <h3 class="company2">Best Buy</h3>
-<a class="companyURL2" href="https://www.bestbuy.com/">URL2</a>
+<a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
 <img class="screenshot2" src="" alt="">
 <p class="desc-2">
 
