--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -34,9 +34,11 @@
 </p>
 
 <h1 class="principle-3">P.A.R.C</h1>
-<h3 class="company3">company name</h3>
-<a class="companyURL3" href="">URL3</a>
+<h3 class="company3">Adidas</h3>
+<a class="companyURL3" href="https://www.adidas.com/us">www.adidas.com</a>
 <img class="screenshot3" src="" alt="">
+<img class="screenshot4" src="" alt="">
+<img class="screenshot5" src="" alt="">
 <p class="desc-3">
 
 </p>
