--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -33,7 +33,7 @@
 
 </p>
 
-<h1 class="principle-3">P.A.R.C</h1>
+<h1 class="principle-3">P.A.R.C Repetition</h1>
 <h3 class="company3">Adidas</h3>
 <a class="companyURL3" href="https://www.adidas.com/us">www.adidas.com</a>
 <img class="screenshot3" src="" alt="">
