--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -28,7 +28,7 @@
 <h1 class="principle-2">White Space</h1>
 <h3 class="company2">Best Buy</h3>
 <a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
-<img class="screenshot2" src="Lesson2\lesson2Img\bestbuy.PNG" alt="best buy screenshot">
+<img class="screenshot2" src="Lesson2/lesson2Img/bestbuy.PNG" alt="best buy screenshot">
 <p class="desc-2">
 
 </p>
