--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -21,7 +21,15 @@
 <h3 class="company1">Disney</h3>
 <a class="companyURL1" href="https://www.disney.com/">www.disney.com</a>
 <p class="desc-1">
-
+This website is a good example of "Visual Hierarchy" your eye is drawn to the
+the order of what is more important.
+<ol>
+  <li>The image of the Might Ducks team on the zamboni</li>
+  <li>The title of the show.</li>
+  <li>"Stream Now" button so it is easy for the viewer to start watching the movie.</li>
+  <li>Description of the series.</li>
+  <li>The links to other pages on the website.</li>
+</ol>
 </p>
 <img class="screenshot1" src="lesson2Img/disney.PNG" alt="Disney screenshot">
 
