--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -37,7 +37,10 @@ the order of what is more important.
 <h3 class="company2">Best Buy</h3>
 <a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
 <p class="desc-2">
-
+The Best Buy website is a good example of how to utilize "white space" to create a distinction between the elements to help the user
+focus on the products that they are highlighting. The amount of white space also helps make the page more asymetrical also they established
+a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
+is accomplished by increasing the padding inside the button. 
 </p>
 <img class="screenshot2" src="lesson2Img/bestbuy.PNG" alt="Best Buy screenshot">
 
@@ -48,9 +51,10 @@ the order of what is more important.
 
 </p>
 <img class="screenshot3" src="lesson2Img/adidas1.PNG" alt="Adidas screenshot 1 of 3">
+<!--
 <img class="screenshot4" src="lesson2Img/adidas2.PNG" alt="Adidas screenshot 2 of 3">
 <img class="screenshot5" src="lesson2Img/adidas3.PNG" alt="Adidas screenshot 3 of 3">
-
+-->
 </main>
   <footer>
    
