--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -17,6 +17,7 @@
     
  </header>
  <main>
+<div class="sec-1">   
 <h1 class="principle-1">Visual Hierarchy</h1>
 <h3 class="company1">Disney</h3>
 <a class="companyURL1" href="https://www.disney.com/">www.disney.com</a>
@@ -32,7 +33,9 @@ the order of what is more important.
 </ol>
 </p>
 <img class="screenshot1" src="lesson2Img/disney.PNG" alt="Disney screenshot">
+</div>
 
+<div class="sec-2">
 <h1 class="principle-2">White Space</h1>
 <h3 class="company2">Best Buy</h3>
 <a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
@@ -43,7 +46,9 @@ a visual hierarchy. You are first drawn to the image of the iMacs and the second
 is accomplished by increasing the padding inside the button. 
 </p>
 <img class="screenshot2" src="lesson2Img/bestbuy.PNG" alt="Best Buy screenshot">
+</div>
 
+<div class="sec-3">
 <h1 class="principle-3">P.A.R.C Repetition</h1>
 <h3 class="company3">Adidas</h3>
 <a class="companyURL3" href="https://www.adidas.com/us">www.adidas.com</a>
@@ -55,6 +60,7 @@ is accomplished by increasing the padding inside the button.
 <img class="screenshot4" src="lesson2Img/adidas2.PNG" alt="Adidas screenshot 2 of 3">
 <img class="screenshot5" src="lesson2Img/adidas3.PNG" alt="Adidas screenshot 3 of 3">
 -->
+</div>
 </main>
   <footer>
    
