--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -22,8 +22,8 @@
 <h3 class="company1">Disney</h3>
 <a class="companyURL1" href="https://www.disney.com/">www.disney.com</a>
 <p class="desc-1">
-This website is a good example of "Visual Hierarchy" your eye is drawn to the
-the order of what is more important.
+  This website is a good example of the "Visual Hierarchy" principle.  Your eye is drawn to the
+  the order of what to focus on in a sequential order.  
 <ol>
   <li>The image of the Might Ducks team on the zamboni</li>
   <li>The title of the show.</li>
@@ -40,10 +40,11 @@ the order of what is more important.
 <h3 class="company2">Best Buy</h3>
 <a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
 <p class="desc-2">
-The Best Buy website is a good example of how to utilize "white space" to create a distinction between the elements to help the user
-focus on the products that they are highlighting. The amount of white space also helps make the page more asymetrical also they established
-a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
-is accomplished by increasing the padding inside the button. 
+  The Best Buy website is a good example of how to utilize "white space" to create a distinction between the elements to help the user
+  focus on the products that they are highlighting. The amount of white space also helps make the page more asymmetrical also they established
+  a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
+  is accomplished by increasing the padding inside the button.
+  
 </p>
 <img class="screenshot2" src="lesson2Img/bestbuy.PNG" alt="Best Buy screenshot">
 </div>
@@ -53,7 +54,9 @@ is accomplished by increasing the padding inside the button.
 <h3 class="company3">Adidas</h3>
 <a class="companyURL3" href="https://www.adidas.com/us">www.adidas.com</a>
 <p class="desc-3">
-
+  The Adidas website has a good example of P.A.R.C repetition principle. It starts off with having a banner running across the width of the screen
+   then it transitions into individual links to other parts of the website for members only, members weekly specials, member rewards, 
+   member prizes and so on. Then it transitions to another banner spanning the width of the screen. 
 </p>
 <img class="screenshot3" src="lesson2Img/adidas1.PNG" alt="Adidas screenshot 1 of 3">
 <!--
