--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -33,7 +33,7 @@
 </ol>
 </p>
 <img class="screenshot1" src="lesson2Img/disney.PNG" alt="Disney screenshot">
-</article>>
+</article>
 
 <article class="sec-2">
 <h1 class="principle-2">White Space</h1>
@@ -44,7 +44,6 @@
   focus on the products that they are highlighting. The amount of white space also helps make the page more asymmetrical also they established
   a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
   is accomplished by increasing the padding inside the button.
-  
 </p>
 <img class="screenshot2" src="lesson2Img/bestbuy.PNG" alt="Best Buy screenshot">
 </article>
