--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -14,7 +14,8 @@
 </head>
 <body>
   <header>
-    
+    <h1 class="headline-1">Design Principles Document</h1>
+    <h2 class="sub-headline">Jovani Ambriz</h2>
  </header>
  <main>
 <article class="sec-1">   
