--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -13,7 +13,7 @@
   <script defer src="l2script.js"></script>
 </head>
 <body>
-  <header>
+  <header class="lesson-2-header">
     <h1 class="headline-1">Design Principles Document</h1>
     <h2 class="sub-headline">Jovani Ambriz</h2>
  </header>
@@ -65,8 +65,5 @@
 -->
 </article>
 </main>
-  <footer>
-   
-  </footer>
 </body>
 </html> 
