--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link href="/normalize.css" rel="stylesheet" />
-  <link href="/l2styles.css" rel="stylesheet" />
+  <link href="l2styles.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script defer src="l2script.js"></script>
