--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -19,25 +19,25 @@
  </header>
  <main>
 <article class="sec-1">   
-<h1 class="principle-1">Visual Hierarchy</h1>
+<h2 class="principle-1">Visual Hierarchy</h2>
 <h3 class="company1">Disney</h3>
 <a class="companyURL1" href="https://www.disney.com/">www.disney.com</a>
 <p class="desc-1">
   This website is a good example of the "Visual Hierarchy" principle.  Your eye is drawn to the
-  the order of what to focus on in a sequential order.  
-<ol>
+  the order of what to focus on in a sequential order.
+</p>  
+<ol class="desc-1-list">
   <li>The image of the Might Ducks team on the zamboni</li>
   <li>The title of the show.</li>
   <li>"Stream Now" button so it is easy for the viewer to start watching the movie.</li>
   <li>Description of the series.</li>
   <li>The links to other pages on the website.</li>
 </ol>
-</p>
 <img class="screenshot1" src="lesson2Img/disney.PNG" alt="Disney screenshot">
 </article>
 
 <article class="sec-2">
-<h1 class="principle-2">White Space</h1>
+<h2 class="principle-2">White Space</h2>
 <h3 class="company2">Best Buy</h3>
 <a class="companyURL2" href="https://www.bestbuy.com/">www.bestbuy.com</a>
 <p class="desc-2">
@@ -50,7 +50,7 @@
 </article>
 
 <article class="sec-3">
-<h1 class="principle-3">P.A.R.C Repetition</h1>
+<h2 class="principle-3">P.A.R.C Repetition</h2>
 <h3 class="company3">Adidas</h3>
 <a class="companyURL3" href="https://www.adidas.com/us">www.adidas.com</a>
 <p class="desc-3">
