--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="/styles.css" rel="stylesheet" />
+  <link href="/small.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script defer src="/script.js"></script>
 </head>
 <body>
   <header class="portal-header">
-    <h1 class="student-name">Jovani Ambriz</h1>
   <img class="profile-image" src="img/Familypic1.jpg" alt="Ambriz Family">
+  <h1 class="student-name">Jovani Ambriz</h1>
  </header>
  <main>
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
@@ -25,7 +25,7 @@
 </ul>
 </main>
   <footer>
-   <span class="foot-info">&copy;</span><span id="year"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a>
+   <span class="foot-info">&copy;</span><span id="year"></span> <span>| Jovani Ambriz | California |</span><a  href="https://www.byui.edu/online">BYUI Online Learning</a><br>
    <span class="modDate">Last updated: </span><span class="date"></span>
   </footer>
 </body>
