--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -8,6 +8,8 @@
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link href="/normalize.css" rel="stylesheet" />
   <link href="/Lesson2/l2styles.css" rel="stylesheet" />
+  <link href="/Lesson2/l2medium.css" rel="stylesheet" />
+  <link href="/Lesson2/l2large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script defer src="l2script.js"></script>
