--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="/small.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
