--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -6,7 +6,7 @@
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
-  <link href="/normalize.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="/Lesson2/l2styles.css" rel="stylesheet" />
   <link href="/Lesson2/l2medium.css" rel="stylesheet" />
   <link href="/Lesson2/l2large.css" rel="stylesheet" />
