--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -35,7 +35,7 @@
   <li>Description of the series.</li>
   <li>The links to other pages on the website.</li>
 </ol>
-<img class="screenshot1" src="lesson2Img/disney.PNG" alt="Disney screenshot">
+<img class="screenshot1" src="/Lesson2/lesson2Img/rsz_disney.jpg" alt="Disney screenshot">
 </article>
 
 <article class="sec-2">
@@ -48,7 +48,7 @@
   a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
   is accomplished by increasing the padding inside the button.
 </p>
-<img class="screenshot2" src="lesson2Img/bestbuy.PNG" alt="Best Buy screenshot">
+<img class="screenshot2" src="/Lesson2/lesson2Img/rsz_bestbuy.jpg" alt="Best Buy screenshot">
 </article>
 
 <article class="sec-3">
@@ -60,11 +60,7 @@
    then it transitions into individual links to other parts of the website for members only, members weekly specials, member rewards, 
    member prizes and so on. Then it transitions to another banner spanning the width of the screen. 
 </p>
-<img class="screenshot3" src="lesson2Img/adidas1.PNG" alt="Adidas screenshot 1 of 3">
-<!--
-<img class="screenshot4" src="lesson2Img/adidas2.PNG" alt="Adidas screenshot 2 of 3">
-<img class="screenshot5" src="lesson2Img/adidas3.PNG" alt="Adidas screenshot 3 of 3">
--->
+<img class="screenshot3" src="/Lesson2/lesson2Img/rsz_1adidas1.jpg" alt="Adidas screenshot">
 </article>
 </main>
 </body>
