--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="/small.css" rel="stylesheet" />
+  <link href="media_query/medium.css" rel="stylesheet" />
+  <link href="media_query/large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
   <script defer src="/script.js"></script>
