--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="/Lesson2/l2styles.css" rel="stylesheet" />
+  <link href="/Lesson2/l2small.css" rel="stylesheet" />
   <link href="/Lesson2/l2medium.css" rel="stylesheet" />
   <link href="/Lesson2/l2large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
