--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
+  <meta name="description" content="Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>Assignment portal for Jovani Ambriz for WDD 230</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="/small.css" rel="stylesheet" />
   <link href="media_query/medium.css" rel="stylesheet" />
@@ -22,7 +23,7 @@
  <main>
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
 <ul>
-  <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
+  <li>Lesson 02:<a href="/Lesson-2/design-principles.html">Design Principles</a></li>
   <li>Lesson 03:<a href="">Assignment Link</a></li>
 </ul>
 </main>
