--- a/Lesson-2/design-principles.html
+++ b/Lesson-2/design-principles.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho</title>
+  <meta name="description" content="Lesson 2 on design principles by Jovani Ambriz for WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>Lesson 2: design-principles</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="/Lesson2/l2small.css" rel="stylesheet" />
-  <link href="/Lesson2/l2medium.css" rel="stylesheet" />
-  <link href="/Lesson2/l2large.css" rel="stylesheet" />
+  <link href="/css/lesson_2/l2small.css" rel="stylesheet" />
+  <link href="/css/lesson_2/l2medium.css" rel="stylesheet" />
+  <link href="/css/lesson_2/l2large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
-  <script defer src="l2script.js"></script>
+  <script defer src="/js/lesson-2/l2script.js"></script>
 </head>
 <body>
   <header class="lesson-2-header">
@@ -35,7 +36,7 @@
   <li>Description of the series.</li>
   <li>The links to other pages on the website.</li>
 </ol>
-<img class="screenshot1" src="/Lesson2/lesson2Img/rsz_disney.jpg" alt="Disney screenshot">
+<img class="screenshot1" src="/img/lesson-2-img/disney.PNG" alt="Disney screenshot">
 </article>
 
 <article class="sec-2">
@@ -48,7 +49,7 @@
   a visual hierarchy. You are first drawn to the image of the iMacs and the second thing that stands out is the "shop now" button and that 
   is accomplished by increasing the padding inside the button.
 </p>
-<img class="screenshot2" src="/Lesson2/lesson2Img/rsz_bestbuy.jpg" alt="Best Buy screenshot">
+<img class="screenshot2" src="/img/lesson-2-img/bestbuy.PNG" alt="Best Buy screenshot">
 </article>
 
 <article class="sec-3">
@@ -60,7 +61,7 @@
    then it transitions into individual links to other parts of the website for members only, members weekly specials, member rewards, 
    member prizes and so on. Then it transitions to another banner spanning the width of the screen. 
 </p>
-<img class="screenshot3" src="/Lesson2/lesson2Img/rsz_1adidas1.jpg" alt="Adidas screenshot">
+<img class="screenshot3" src="/img/lesson-2-img/adidas1.PNG" alt="Adidas screenshot">
 </article>
 </main>
 </body>
