--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -5,17 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Jovani Ambriz" content="This is the course portal home page for WDD 230">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Assignment portal for Jovani Ambriz in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <meta name="description" content="Website planning Document for weather website project in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <title>Assignment portal for Jovani Ambriz for WDD 230</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="#" rel="stylesheet" />
-  <link href="#" rel="stylesheet" />
-  <link href="#" rel="stylesheet" />
+  <link href="/css/lesson_3/l3small.css" rel="stylesheet" />
+  <link href="/css/lesson_3/l3medium.css" rel="stylesheet" />
+  <link href="/css/lesson_3/l3large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
-  <script defer src="#"></script>
+  <script defer src="/js/lesson-3/l3script.js"></script>
 </head>
 <body>
-
+<header class="lesson-title">
+  <h1 class="title">Website Planning Document</h1>
+  <nav class="site-links">
+    <a href="target-audience.html">Target Audience</a>
+    <a href="color-scheme.html">Color Scheme</a>
+    <a href="typography.html">Typography</a>
+  </nav>
+</header>
+<main class="content-1">
+<h2 class="site-name">weathernearme.us</h2>
+<section class="sec-1">
+  <h3 class="sec-1-title">Site Name</h3>
+  <p class="sec-1-par">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur eaque minus excepturi natus similique ducimus temporibus earum autem reprehenderit. Fugit, provident quasi. Hic corporis ad excepturi, repellendus corrupti rem reiciendis!
+  </p>
+  <a class="sec-1-link" href="https://domains.google.com/registrar/search?searchTerm=weather&hl=en&_ga=2.6789621.653273563.1622618147-973383235.1622618147#">Domain name availability</a>
+</section>
+<section class="sec-2">
+  <h3 class="sec-2-title">Site Purpose</h3>
+  <p class="sec-2-par">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, et. Sequi officiis quod, quisquam vel alias ea. Eius porro, nihil odit tenetur voluptas delectus alias eos voluptates iure! Incidunt, eius.
+  </p>
+</section>
+</main>
 </body>
 </html>
