--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2 class="course-headline">WDD 230: Assignment Portal</h2>
 <ul>
   <li>Lesson 02:<a href="/Lesson-2/design-principles.html">Design Principles</a></li>
-  <li>Lesson 03:<a href="">Assignment Link</a></li>
+  <li>Lesson 03:<a href="/lesson-3/index.html">Website Planning Document</a></li>
 </ul>
 </main>
   <footer>
