--- a/lesson-3/color-scheme.html
+++ b/lesson-3/color-scheme.html
@@ -16,17 +16,24 @@
   <script defer src="/js/lesson-3/"></script>
 </head>
 <body>
-    <header class="lesson-title">
-        <h1 class="title">Website Planning Document</h1>
-        <nav class="site-links">
-          <a href="index.html">Site Plan</a>
-          <a href="target-audience.html">Target Audience</a>
-          <a href="typography.html">Typography</a>
-        </nav>
-      </header>
+  <header class="lesson-title">
+    <h1 class="title">Website Planning Document</h1>
+    <nav class="site-links">
+      <a href="index.html">Home</a>
+      <a href="target-audience.html">Target Audience</a>
+      <a href="color-scheme.html">Color Scheme</a>
+      <a href="typography.html">Typography</a>
+    </nav>
+  </header>
 <main class="content-3">
     <section class="sec-5">
         <h2 class="sec-5-title">Color Scheme</h2>
+        <p class="sec-5-par">Pallete URL <a href="https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249">https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249</a></p>
+        <table>
+          <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
+          <tr><td class="primary">[#007EA7]</td><td class="secondary">[#CCDBDC]</td><td class="accent-1">[#003249]</td>
+          <td class="accent-2">[#80CED7]</td><td class="accent-3">[#9AD1D4]</td></tr>
+        </table>
     </section>
 </main>
 </body>
