--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -19,6 +19,7 @@
 <header class="lesson-title">
   <h1 class="title">Website Planning Document</h1>
   <nav class="site-links">
+    <a href="index.html">Home</a>
     <a href="target-audience.html">Target Audience</a>
     <a href="color-scheme.html">Color Scheme</a>
     <a href="typography.html">Typography</a>
@@ -27,16 +28,23 @@
 <main class="content-1">
 <h2 class="site-name">weathernearme.us</h2>
 <section class="sec-1">
-  <h3 class="sec-1-title">Site Name</h3>
+  <h3 class="sec-1-title">weathernearme</h3>
   <p class="sec-1-par">
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur eaque minus excepturi natus similique ducimus temporibus earum autem reprehenderit. Fugit, provident quasi. Hic corporis ad excepturi, repellendus corrupti rem reiciendis!
+    The website URL for my weather site project is weathernearme.us and the reason I choose this url aside from it being available is that 
+    it is easy to remember "Siri what is the weather near me?". This helps the user remember the name of the site so they keep coming back to it.
   </p>
   <a class="sec-1-link" href="https://domains.google.com/registrar/search?searchTerm=weather&hl=en&_ga=2.6789621.653273563.1622618147-973383235.1622618147#">Domain name availability</a>
 </section>
 <section class="sec-2">
   <h3 class="sec-2-title">Site Purpose</h3>
   <p class="sec-2-par">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, et. Sequi officiis quod, quisquam vel alias ea. Eius porro, nihil odit tenetur voluptas delectus alias eos voluptates iure! Incidunt, eius.
+    The porpose of this site is to offer the user access to weather information for their location. In this website it will show the weather for Preston,
+     Soda Springs and Fish Haven as well as gallery of local weather events. 
+  </p>
+  <h3 class="sec-2-logo-title">Site Logo</h3>
+  <img class="logo" src="/img/lesson-3-img/rsz_weather-logo-small.png" alt="logo">
+  <p class="logo-par">
+    This logo has a transparent background which will be useful once we start utilizing the color pallete for the website.
   </p>
 </section>
 </main>
