--- a/lesson-3/typography.html
+++ b/lesson-3/typography.html
@@ -16,14 +16,15 @@
   <script defer src="/js/lesson-3/l3script.js"></script>
 </head>
 <body>
-    <header class="lesson-title">
-        <h1 class="title">Website Planning Document</h1>
-        <nav class="site-links">
-          <a href="index.html">Site Plan</a>
-          <a href="target-audience.html">Target Audience</a>
-          <a href="color-scheme.html">Color Scheme</a>
-        </nav>
-      </header>
+  <header class="lesson-title">
+    <h1 class="title">Website Planning Document</h1>
+    <nav class="site-links">
+      <a href="index.html">Home</a>
+      <a href="target-audience.html">Target Audience</a>
+      <a href="color-scheme.html">Color Scheme</a>
+      <a href="typography.html">Typography</a>
+    </nav>
+  </header>
 <main class="content-4">
     <section class="sec-6">
         <h2 class="sec-6-title">Typography</h2>
