--- a/lesson-3/color-scheme.html
+++ b/lesson-3/color-scheme.html
@@ -29,10 +29,21 @@
     <section class="sec-5">
         <h2 class="sec-5-title">Color Scheme</h2>
         <p class="sec-5-par">Pallete URL <a href="https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249">https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249</a></p>
-        <table>
-          <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
-          <tr><td class="primary">[#007EA7]</td><td class="secondary">[#CCDBDC]</td><td class="accent-1">[#003249]</td>
-          <td class="accent-2">[#80CED7]</td><td class="accent-3">[#9AD1D4]</td></tr>
+        <table class="sec-5-table">
+          <tr>
+            <th>Primary</th>
+            <th>Secondary</th>
+            <th>Accent 1</th>
+            <th>Accent 2</th>
+            <th>Accent 3</th>
+          </tr>
+          <tr>
+            <td class="primary">[#007EA7]</td>
+            <td class="secondary">[#CCDBDC]</td>
+            <td class="accent-1">[#003249]</td>
+            <td class="accent-2">[#80CED7]</td>
+            <td class="accent-3">[#9AD1D4]</td>
+          </tr>
         </table>
     </section>
 </main>
