--- a/lesson-3/typography.html
+++ b/lesson-3/typography.html
@@ -28,6 +28,56 @@
 <main class="content-4">
     <section class="sec-6">
         <h2 class="sec-6-title">Typography</h2>
+        <table class="sec-6-table">
+          <tr>
+            <th>Element</th>
+            <th>Font</th>
+            <th>Color</th>
+            <th>Sample</th>
+          </tr>
+          <tr>
+            <td>Header</td>
+            <td>Noto Sans JP</td>
+            <td class="color-1">######</td>
+            <td class="sample-1">Text</td>
+          </tr>
+          <tr>
+            <td>Navigation</td>
+            <td>Lato</td>
+            <td class="color-2">######</td>
+            <td class="sample-2">Text</td>
+          </tr>
+          <tr>
+            <td>Footer</td>
+            <td>Lato</td>
+            <td class="color-3">######</td>
+            <td class="sample-3">Text</td>
+          </tr>
+          <tr>
+            <td>H1</td>
+            <td>Noto Sans JP</td>
+            <td class="color-4">######</td>
+            <td class="sample-4">Text</td>
+          </tr>
+          <tr>
+            <td>H2</td>
+            <td>Noto Sans JP</td>
+            <td class="color-5">######</td>
+            <td class="sample-5">Text</td>
+          </tr>
+          <tr>
+            <td>H3</td>
+            <td>Noto Sans JP</td>
+            <td class="color-6">######</td>
+            <td class="sample-6">Text</td>
+          </tr>
+          <tr>
+            <td>Paragraph</td>
+            <td>Lato</td>
+            <td class="color-7">######</td>
+            <td class="sample-7">Text</td>
+          </tr>
+        </table>
     </section>
 </main>
 </body>
