--- a/lesson-3/typography.html
+++ b/lesson-3/typography.html
@@ -38,43 +38,49 @@
           <tr>
             <td>Header</td>
             <td>Noto Sans JP</td>
-            <td class="color-1">######</td>
+            <td class="color-1">#003249</td>
             <td class="sample-1">Text</td>
           </tr>
           <tr>
             <td>Navigation</td>
             <td>Lato</td>
-            <td class="color-2">######</td>
+            <td class="color-2">#CCDBDC</td>
             <td class="sample-2">Text</td>
+          </tr>
+          <tr>
+            <td>Body</td>
+            <td>Lato</td>
+            <td class="color-b">#007EA7</td>
+            <td class="sample-b">Text</td>
           </tr>
           <tr>
             <td>Footer</td>
             <td>Lato</td>
-            <td class="color-3">######</td>
+            <td class="color-3">#003249</td>
             <td class="sample-3">Text</td>
           </tr>
           <tr>
             <td>H1</td>
             <td>Noto Sans JP</td>
-            <td class="color-4">######</td>
+            <td class="color-4">#CCDBDC</td>
             <td class="sample-4">Text</td>
           </tr>
           <tr>
             <td>H2</td>
             <td>Noto Sans JP</td>
-            <td class="color-5">######</td>
+            <td class="color-5">#CCDBDC</td>
             <td class="sample-5">Text</td>
           </tr>
           <tr>
             <td>H3</td>
             <td>Noto Sans JP</td>
-            <td class="color-6">######</td>
+            <td class="color-6">#CCDBDC</td>
             <td class="sample-6">Text</td>
           </tr>
           <tr>
             <td>Paragraph</td>
             <td>Lato</td>
-            <td class="color-7">######</td>
+            <td class="color-7">#CCDBDC</td>
             <td class="sample-7">Text</td>
           </tr>
         </table>
